2011-07-18  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c, avatar-audio.c:
	remove all deprecated functions

	* akfavatar.h: use stdbool.h instead of avt_bool_t
	all callers adapted
	pascal/akfavatar.pas adapted

------------------------------------------------------------------------

2011-07-14  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.20.0 released

2011-07-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_ask): use avt_char; check if character is printable

	* avatar.c (avt_key): check if it's really a key

	* filechooser.c: mark parent directory with a double arrow up

2011-07-04  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait_button, avt_key):
	don't accept F11 unless reserve_single_keys is set

2011-07-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_set_text_background_color): fix

	* lua/lua-avt.c (luaopen_akfavatar_embedded): new function
	lua/lua-akfavatar-prg.c (initialize_lua): adapted

2011-06-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_isblank): new macro

2011-06-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_font_size): new function
	(avt_get_font_height, avt_get_font_width): removed

2011-06-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate):
	on audio end push 'f' over 's', no matter how they are arranged

	* bdf2c, avtinternals.h, akfavatar.h, avatar.c (avt_drawchar):
	get_font_char(int) in main API, returns void*

	* akfavatar.h, avatar.c (avt_get_font_height, avt_get_font_width):
	new functions

2011-05-19  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-canvas.c: new file

2011-05-18  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c:
	don't show header files directly (use about-files)

	* akfavatar.h, avatar.c (avt_show_raw_image): new function
	(avt_show_gimp_image): adapted - marked deprecated

	* akfavatar.h, avatar.c (avt_get_background_color)